Implementati metodi controller

--- a/mssc-beer-service/src/main/resources/application.properties
+++ b/mssc-beer-service/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:file:C:/Users/lorenzo.elia/Desktop/DatabaseProva
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:file:C:/Users/lorenzo.elia/Desktop/DatabaseProva
